compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__dead_code_detection__constant_only_referenced_by_unused_constant.snap
---
source: compiler-core/src_refactored/__core/type_/tests/dead_code_detection.rs
assertion_line: 47
expression: "\nconst value = 10\n\nconst value_twice = #(value, value)\n"
snapshot_kind: text
---
----- SOURCE CODE

const value = 10

const value_twice = #(value, value)


----- WARNING
warning: Unused private constant
  ┌─ /src/warning/wrn.gleam:2:1
  │
2 │ const value = 10
  │ ^^^^^^^^^^^ This private constant is never used

Hint: You can safely remove it.

warning: Unused private constant
  ┌─ /src/warning/wrn.gleam:4:1
  │
4 │ const value_twice = #(value, value)
  │ ^^^^^^^^^^^^^^^^^ This private constant is never used

Hint: You can safely remove it.
