compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__dead_code_detection__constructor_used_if_type_alias_shadows_it.snap
---
source: compiler-core/src_refactored/__core/type_/tests/dead_code_detection.rs
assertion_line: 513
expression: "\nimport wibble.{Wibble}\n\ntype Wibble =\n  wibble.Wibble\n\npub fn main() {\n  Wibble(\"hello\")\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
-- wibble.gleam

pub type Wibble {
  Wibble(String)
}


-- main.gleam

import wibble.{Wibble}

type Wibble =
  wibble.Wibble

pub fn main() {
  Wibble("hello")
}


----- WARNING
warning: Unused private type
  ┌─ /src/warning/wrn.gleam:4:1
  │  
4 │ ╭ type Wibble =
5 │ │   wibble.Wibble
  │ ╰───────────────^ This private type is never used

Hint: You can safely remove it.
