compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__dead_code_detection__imported_module_alias_only_referenced_by_unused_function.snap
---
source: compiler-core/src_refactored/__core/type_/tests/dead_code_detection.rs
assertion_line: 149
expression: "\nimport wibble as wobble\n\nfn unused() {\n  wobble.Wibble\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
-- wibble.gleam

pub type Wibble {
  Wibble(Int)
}


-- main.gleam

import wibble as wobble

fn unused() {
  wobble.Wibble
}


----- WARNING
warning: Unused private function
  ┌─ /src/warning/wrn.gleam:4:1
  │
4 │ fn unused() {
  │ ^^^^^^^^^^^ This private function is never used

Hint: You can safely remove it.
