compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__dead_code_detection__imported_module_marked_unused_when_shadowed_in_record_access.snap
---
source: compiler-core/src_refactored/__core/type_/tests/dead_code_detection.rs
assertion_line: 466
expression: "\nimport wibble\n\ntype Wibble {\n  Wibble(wobble: Int)\n}\n\npub fn main() {\n  let wibble = Wibble(10)\n  // This does not reference the `wibble` module!\n  wibble.wobble\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
-- wibble.gleam

pub const wibble = 1


-- main.gleam

import wibble

type Wibble {
  Wibble(wobble: Int)
}

pub fn main() {
  let wibble = Wibble(10)
  // This does not reference the `wibble` module!
  wibble.wobble
}


----- WARNING
warning: Unused imported module
  ┌─ /src/warning/wrn.gleam:2:1
  │
2 │ import wibble
  │ ^^^^^^^^^^^^^ This imported module is never used

Hint: You can safely remove it.
