compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__dead_code_detection__imported_value_only_referenced_by_unused_function.snap
---
source: compiler-core/src_refactored/__core/type_/tests/dead_code_detection.rs
assertion_line: 301
expression: "\nimport wibble.{Wibble}\n\nfn unused() {\n  Wibble\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
-- wibble.gleam

pub type Wibble {
  Wibble(Int)
}


-- main.gleam

import wibble.{Wibble}

fn unused() {
  Wibble
}


----- WARNING
warning: Unused imported module
  ┌─ /src/warning/wrn.gleam:2:1
  │
2 │ import wibble.{Wibble}
  │ ^^^^^^^^^^^^^^^^^^^^^^ This imported module is never used

Hint: You can safely remove it.

warning: Unused private function
  ┌─ /src/warning/wrn.gleam:4:1
  │
4 │ fn unused() {
  │ ^^^^^^^^^^^ This private function is never used

Hint: You can safely remove it.
